[gd_scene load_steps=14 format=3 uid="uid://c4thn5ksw1ir"]

[ext_resource type="FontFile" uid="uid://ckhm8rf0gkall" path="res://Fonts/PressStart2P.ttf" id="1_ce3w2"]
[ext_resource type="Shader" uid="uid://d2vjhlm67n8o3" path="res://Shaders/main_menu.gdshader" id="2_n45e2"]
[ext_resource type="Script" uid="uid://dkojs28l63sgi" path="res://Scripts/main_menu.gd" id="2_opfnp"]
[ext_resource type="Theme" uid="uid://40nioq1aq85y" path="res://Themes/Main_Menu/main_menu_theme.tres" id="3_opfnp"]
[ext_resource type="Shader" uid="uid://bmshk4keesyac" path="res://Shaders/logo.gdshader" id="5_opfnp"]
[ext_resource type="Texture2D" uid="uid://drih85bl35m1d" path="res://Sprites/escudofi_rojo.png" id="6_cp0ys"]
[ext_resource type="PackedScene" path="res://Scenes/transitions.tscn" id="7_cp0ys"]

[sub_resource type="Theme" id="Theme_yhxw7"]
default_font = ExtResource("1_ce3w2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_trj04"]
shader = ExtResource("2_n45e2")
shader_parameter/pixelation = 64.0
shader_parameter/spread = 0.33
shader_parameter/size = 0.365
shader_parameter/speed = 1.0
shader_parameter/ray1_density = 8.5
shader_parameter/ray2_density = 8.5
shader_parameter/ray2_intensity = 0.5
shader_parameter/core_intensity = -1.0
shader_parameter/hdr = false
shader_parameter/seed = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cp0ys"]
shader = ExtResource("5_opfnp")
shader_parameter/interval = 3.0
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 5.0
shader_parameter/intensityY = 5.0
shader_parameter/seed = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16hvj"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.14767182, 0.14767182, 0.14767176, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vr1f0"]

[sub_resource type="Theme" id="Theme_t1dhk"]
Button/constants/line_spacing = 10
Button/font_sizes/font_size = 24
Button/styles/normal = SubResource("StyleBoxFlat_16hvj")
PanelContainer/styles/panel = SubResource("StyleBoxEmpty_vr1f0")

[node name="MainMenu" type="Control" node_paths=PackedStringArray("transitions", "main_options_container", "second_options_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yhxw7")
script = ExtResource("2_opfnp")
transitions = NodePath("Transitions")
main_options_container = NodePath("MainOptionsContainer")
second_options_container = NodePath("SecondOptionsContainer")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_trj04")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.072842635, 0.072842635, 0.072842635, 1)

[node name="LogoContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(610, 250)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
theme = ExtResource("3_opfnp")

[node name="VBoxContainer" type="VBoxContainer" parent="LogoContainer"]
layout_mode = 2
theme = ExtResource("3_opfnp")
theme_override_constants/separation = -5

[node name="Logo" type="TextureRect" parent="LogoContainer/VBoxContainer"]
modulate = Color(8.663535e-07, 0.5208546, 0.6561686, 1)
material = SubResource("ShaderMaterial_cp0ys")
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_cp0ys")
expand_mode = 2

[node name="TextLogo" type="PanelContainer" parent="LogoContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 3

[node name="Text" type="RichTextLabel" parent="LogoContainer/VBoxContainer/TextLogo"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
bbcode_enabled = true
text = "[wave]FI DRIVE[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainOptionsContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 46.0
offset_right = 199.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_t1dhk")

[node name="VBoxContainer" type="VBoxContainer" parent="MainOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MainOptionsContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Jugar"

[node name="Quit" type="Button" parent="MainOptionsContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Salir"

[node name="SecondOptionsContainer" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 47.0
offset_right = 199.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_t1dhk")

[node name="VBoxContainer" type="VBoxContainer" parent="SecondOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Normal" type="Button" parent="SecondOptionsContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_vertical = 4
text = "Jugar en normal"

[node name="Extreme" type="Button" parent="SecondOptionsContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Jugar en extremo"

[node name="Return" type="Button" parent="SecondOptionsContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Regresar"

[node name="Transitions" parent="." instance=ExtResource("7_cp0ys")]
visible = false

[connection signal="pressed" from="MainOptionsContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainOptionsContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SecondOptionsContainer/VBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="SecondOptionsContainer/VBoxContainer/Extreme" to="." method="_on_extreme_pressed"]
[connection signal="pressed" from="SecondOptionsContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
